# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: StatisticsService_test.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: my_project.code-workspace  pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage  .gitignore
viikko4/verkkokauppa/src/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/kivi-paperi-sakset/src/: index.py  kivipaperisakset.py  kps_parempi_tekoaly.py  kps_tekoaly.py  start.py
