[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["ds20220914 <davidkuul2002@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
